@@ -1,6 +1,6 @@
-Date: 2024-12-29
+Date: 2025-01-07
 Package: CHNOSZ
-Version: 2.1.0-37
+Version: 2.1.0-38
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
